simtk/openmm/7.1/build/simtk/openmm/OpenMMAmoebaLibrary.java

	/**
	 * Original signature : <code>OpenMM_Boolean OpenMM_AmoebaAngleTorsionForce_usesPeriodicBoundaryConditions(const OpenMM_AmoebaAngleTorsionForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaAngleTorsionForce_usesPeriodicBoundaryConditions(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaAngleTorsionForce_usesPeriodicBoundaryConditions(Pointer target);
	/** Original signature : <code>OpenMM_Boolean OpenMM_AmoebaAngleTorsionForce_usesPeriodicBoundaryConditions(const OpenMM_AmoebaAngleTorsionForce*)</code> */
	int OpenMM_AmoebaAngleTorsionForce_usesPeriodicBoundaryConditions(PointerByReference target);
	/**
	 * AmoebaBondForce<br>
	 * Original signature : <code>OpenMM_AmoebaBondForce* OpenMM_AmoebaBondForce_create()</code>
	 */
	PointerByReference OpenMM_AmoebaBondForce_create();
	/**
	 * Original signature : <code>void OpenMM_AmoebaBondForce_destroy(OpenMM_AmoebaBondForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaBondForce_destroy(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaBondForce_destroy(Pointer target);
	/** Original signature : <code>void OpenMM_AmoebaBondForce_destroy(OpenMM_AmoebaBondForce*)</code> */
	void OpenMM_AmoebaBondForce_destroy(PointerByReference target);
	/**
	 * Original signature : <code>int OpenMM_AmoebaBondForce_getNumBonds(const OpenMM_AmoebaBondForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaBondForce_getNumBonds(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaBondForce_getNumBonds(Pointer target);
	/** Original signature : <code>int OpenMM_AmoebaBondForce_getNumBonds(const OpenMM_AmoebaBondForce*)</code> */
	int OpenMM_AmoebaBondForce_getNumBonds(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaBondForce_setAmoebaGlobalBondCubic(OpenMM_AmoebaBondForce*, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaBondForce_setAmoebaGlobalBondCubic(com.sun.jna.ptr.PointerByReference, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaBondForce_setAmoebaGlobalBondCubic(Pointer target, double cubicK);
	/** Original signature : <code>void OpenMM_AmoebaBondForce_setAmoebaGlobalBondCubic(OpenMM_AmoebaBondForce*, double)</code> */
	void OpenMM_AmoebaBondForce_setAmoebaGlobalBondCubic(PointerByReference target, double cubicK);
	/**
	 * Original signature : <code>double OpenMM_AmoebaBondForce_getAmoebaGlobalBondCubic(const OpenMM_AmoebaBondForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaBondForce_getAmoebaGlobalBondCubic(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	double OpenMM_AmoebaBondForce_getAmoebaGlobalBondCubic(Pointer target);
	/** Original signature : <code>double OpenMM_AmoebaBondForce_getAmoebaGlobalBondCubic(const OpenMM_AmoebaBondForce*)</code> */
	double OpenMM_AmoebaBondForce_getAmoebaGlobalBondCubic(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaBondForce_setAmoebaGlobalBondQuartic(OpenMM_AmoebaBondForce*, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaBondForce_setAmoebaGlobalBondQuartic(com.sun.jna.ptr.PointerByReference, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaBondForce_setAmoebaGlobalBondQuartic(Pointer target, double quarticK);
	/** Original signature : <code>void OpenMM_AmoebaBondForce_setAmoebaGlobalBondQuartic(OpenMM_AmoebaBondForce*, double)</code> */
	void OpenMM_AmoebaBondForce_setAmoebaGlobalBondQuartic(PointerByReference target, double quarticK);
	/**
	 * Original signature : <code>double OpenMM_AmoebaBondForce_getAmoebaGlobalBondQuartic(const OpenMM_AmoebaBondForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaBondForce_getAmoebaGlobalBondQuartic(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	double OpenMM_AmoebaBondForce_getAmoebaGlobalBondQuartic(Pointer target);
	/** Original signature : <code>double OpenMM_AmoebaBondForce_getAmoebaGlobalBondQuartic(const OpenMM_AmoebaBondForce*)</code> */
	double OpenMM_AmoebaBondForce_getAmoebaGlobalBondQuartic(PointerByReference target);
	/**
	 * Original signature : <code>int OpenMM_AmoebaBondForce_addBond(OpenMM_AmoebaBondForce*, int, int, double, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaBondForce_addBond(com.sun.jna.ptr.PointerByReference, int, int, double, double)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaBondForce_addBond(Pointer target, int particle1, int particle2, double length, double quadraticK);
	/** Original signature : <code>int OpenMM_AmoebaBondForce_addBond(OpenMM_AmoebaBondForce*, int, int, double, double)</code> */
	int OpenMM_AmoebaBondForce_addBond(PointerByReference target, int particle1, int particle2, double length, double quadraticK);
	/**
	 * Original signature : <code>void OpenMM_AmoebaBondForce_getBondParameters(const OpenMM_AmoebaBondForce*, int, int*, int*, double*, double*)</code><br>
	 * @deprecated use the safer methods {@link #OpenMM_AmoebaBondForce_getBondParameters(com.sun.jna.ptr.PointerByReference, int, java.nio.IntBuffer, java.nio.IntBuffer, java.nio.DoubleBuffer, java.nio.DoubleBuffer)} and {@link #OpenMM_AmoebaBondForce_getBondParameters(com.sun.jna.ptr.PointerByReference, int, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.DoubleByReference, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaBondForce_getBondParameters(Pointer target, int index, IntByReference particle1, IntByReference particle2, DoubleByReference length, DoubleByReference quadraticK);
	/** Original signature : <code>void OpenMM_AmoebaBondForce_getBondParameters(const OpenMM_AmoebaBondForce*, int, int*, int*, double*, double*)</code> */
	void OpenMM_AmoebaBondForce_getBondParameters(PointerByReference target, int index, IntBuffer particle1, IntBuffer particle2, DoubleBuffer length, DoubleBuffer quadraticK);
	/** Original signature : <code>void OpenMM_AmoebaBondForce_getBondParameters(const OpenMM_AmoebaBondForce*, int, int*, int*, double*, double*)</code> */
	void OpenMM_AmoebaBondForce_getBondParameters(PointerByReference target, int index, IntByReference particle1, IntByReference particle2, DoubleByReference length, DoubleByReference quadraticK);
	/**
	 * Original signature : <code>void OpenMM_AmoebaBondForce_setBondParameters(OpenMM_AmoebaBondForce*, int, int, int, double, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaBondForce_setBondParameters(com.sun.jna.ptr.PointerByReference, int, int, int, double, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaBondForce_setBondParameters(Pointer target, int index, int particle1, int particle2, double length, double quadraticK);
	/** Original signature : <code>void OpenMM_AmoebaBondForce_setBondParameters(OpenMM_AmoebaBondForce*, int, int, int, double, double)</code> */
	void OpenMM_AmoebaBondForce_setBondParameters(PointerByReference target, int index, int particle1, int particle2, double length, double quadraticK);
	/**
	 * Original signature : <code>void OpenMM_AmoebaBondForce_updateParametersInContext(OpenMM_AmoebaBondForce*, OpenMM_Context*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaBondForce_updateParametersInContext(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaBondForce_updateParametersInContext(Pointer target, Pointer context);
	/** Original signature : <code>void OpenMM_AmoebaBondForce_updateParametersInContext(OpenMM_AmoebaBondForce*, OpenMM_Context*)</code> */
	void OpenMM_AmoebaBondForce_updateParametersInContext(PointerByReference target, PointerByReference context);
	/**
	 * Original signature : <code>void OpenMM_AmoebaBondForce_setUsesPeriodicBoundaryConditions(OpenMM_AmoebaBondForce*, OpenMM_Boolean)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaBondForce_setUsesPeriodicBoundaryConditions(com.sun.jna.ptr.PointerByReference, int)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaBondForce_setUsesPeriodicBoundaryConditions(Pointer target, int periodic);
	/** Original signature : <code>void OpenMM_AmoebaBondForce_setUsesPeriodicBoundaryConditions(OpenMM_AmoebaBondForce*, OpenMM_Boolean)</code> */
	void OpenMM_AmoebaBondForce_setUsesPeriodicBoundaryConditions(PointerByReference target, int periodic);
	/**
	 * Original signature : <code>OpenMM_Boolean OpenMM_AmoebaBondForce_usesPeriodicBoundaryConditions(const OpenMM_AmoebaBondForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaBondForce_usesPeriodicBoundaryConditions(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaBondForce_usesPeriodicBoundaryConditions(Pointer target);
	/** Original signature : <code>OpenMM_Boolean OpenMM_AmoebaBondForce_usesPeriodicBoundaryConditions(const OpenMM_AmoebaBondForce*)</code> */
	int OpenMM_AmoebaBondForce_usesPeriodicBoundaryConditions(PointerByReference target);
	/**
	 * AmoebaGeneralizedKirkwoodForce<br>
	 * Original signature : <code>OpenMM_AmoebaGeneralizedKirkwoodForce* OpenMM_AmoebaGeneralizedKirkwoodForce_create()</code>
	 */
	PointerByReference OpenMM_AmoebaGeneralizedKirkwoodForce_create();
	/**
	 * Original signature : <code>void OpenMM_AmoebaGeneralizedKirkwoodForce_destroy(OpenMM_AmoebaGeneralizedKirkwoodForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaGeneralizedKirkwoodForce_destroy(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaGeneralizedKirkwoodForce_destroy(Pointer target);
	/** Original signature : <code>void OpenMM_AmoebaGeneralizedKirkwoodForce_destroy(OpenMM_AmoebaGeneralizedKirkwoodForce*)</code> */
	void OpenMM_AmoebaGeneralizedKirkwoodForce_destroy(PointerByReference target);
	/**
	 * Original signature : <code>int OpenMM_AmoebaGeneralizedKirkwoodForce_getNumParticles(const OpenMM_AmoebaGeneralizedKirkwoodForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaGeneralizedKirkwoodForce_getNumParticles(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaGeneralizedKirkwoodForce_getNumParticles(Pointer target);
	/** Original signature : <code>int OpenMM_AmoebaGeneralizedKirkwoodForce_getNumParticles(const OpenMM_AmoebaGeneralizedKirkwoodForce*)</code> */
	int OpenMM_AmoebaGeneralizedKirkwoodForce_getNumParticles(PointerByReference target);
	/**
	 * Original signature : <code>int OpenMM_AmoebaGeneralizedKirkwoodForce_addParticle(OpenMM_AmoebaGeneralizedKirkwoodForce*, double, double, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaGeneralizedKirkwoodForce_addParticle(com.sun.jna.ptr.PointerByReference, double, double, double)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaGeneralizedKirkwoodForce_addParticle(Pointer target, double charge, double radius, double scalingFactor);
	/** Original signature : <code>int OpenMM_AmoebaGeneralizedKirkwoodForce_addParticle(OpenMM_AmoebaGeneralizedKirkwoodForce*, double, double, double)</code> */
	int OpenMM_AmoebaGeneralizedKirkwoodForce_addParticle(PointerByReference target, double charge, double radius, double scalingFactor);
